added get example method for the group
